fixed minor issue on mobile

--- a/public/index/index.scss
+++ b/public/index/index.scss
@@ -219,7 +219,7 @@ body,html{
             }
         }
         .ProjectSectionItem{
-            width: 100%;
+            width: 99%;
             margin: 0;
             p{
                 padding: 0em 1em;
